# sql-copilot

./: .gitignore  Dockerfile  README.md  pyproject.toml  setup.sh
.streamlit/: config.toml
app/: Chat.py
app/chat/: callbacks.py  config.py  data_models.py  utils.py
app/engine/: engine.py  llm_chain.py  prompts.py  sql_engine.py
